// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`delete 1`] = `
[
  "already.gz",
  "outer.html.br",
  "outer.html.gz",
  "outer.png.br",
  "outer.png.gz",
  "src/inner.css.br",
  "src/inner.css.gz",
  "src/inner.js.br",
  "src/inner.js.gz",
]
`;

exports[`exclude 1 1`] = `
[
  "already.gz",
  "outer.html",
  "outer.html.br",
  "outer.html.gz",
  "outer.html.zst",
  "outer.png",
  "src/inner.css",
  "src/inner.css.br",
  "src/inner.css.gz",
  "src/inner.css.zst",
  "src/inner.js",
  "src/inner.js.br",
  "src/inner.js.gz",
  "src/inner.js.zst",
]
`;

exports[`exclude 2 1`] = `
[
  "already.gz",
  "outer.html",
  "outer.html.br",
  "outer.html.gz",
  "outer.html.zst",
  "outer.png",
  "src/inner.css",
  "src/inner.css.br",
  "src/inner.css.gz",
  "src/inner.css.zst",
  "src/inner.js",
  "src/inner.js.br",
  "src/inner.js.gz",
  "src/inner.js.zst",
]
`;

exports[`exclude 3 1`] = `
[
  "already.gz",
  "outer.html",
  "outer.png",
  "outer.png.br",
  "outer.png.gz",
  "outer.png.zst",
  "src/inner.css",
  "src/inner.css.br",
  "src/inner.css.gz",
  "src/inner.css.zst",
  "src/inner.js",
  "src/inner.js.br",
  "src/inner.js.gz",
  "src/inner.js.zst",
]
`;

exports[`exclude 4 1`] = `
[
  "already.gz",
  "outer.html",
  "outer.html.br",
  "outer.html.gz",
  "outer.html.zst",
  "outer.png",
  "outer.png.br",
  "outer.png.gz",
  "outer.png.zst",
  "src/inner.css",
  "src/inner.css.br",
  "src/inner.css.gz",
  "src/inner.css.zst",
  "src/inner.js",
  "src/inner.js.br",
  "src/inner.js.gz",
  "src/inner.js.zst",
]
`;

exports[`include 1 1`] = `
[
  "already.gz",
  "outer.html",
  "outer.html.br",
  "outer.html.gz",
  "outer.html.zst",
  "outer.png",
  "src/inner.css",
  "src/inner.js",
]
`;

exports[`include 2 1`] = `
[
  "already.gz",
  "outer.html",
  "outer.html.br",
  "outer.html.gz",
  "outer.html.zst",
  "outer.png",
  "src/inner.css",
  "src/inner.js",
]
`;

exports[`mtime 1`] = `
[
  "already.gz",
  "outer.html",
  "outer.html.br",
  "outer.html.gz",
  "outer.html.zst",
  "outer.png",
  "outer.png.br",
  "outer.png.gz",
  "outer.png.zst",
  "src/inner.css",
  "src/inner.css.br",
  "src/inner.css.gz",
  "src/inner.css.zst",
  "src/inner.js",
  "src/inner.js.br",
  "src/inner.js.gz",
  "src/inner.js.zst",
]
`;

exports[`outdir 1`] = `
[
  "already.gz",
  "dist/outer.html.br",
  "dist/outer.html.gz",
  "dist/outer.html.zst",
  "dist/outer.png.br",
  "dist/outer.png.gz",
  "dist/outer.png.zst",
  "dist/src/inner.css.br",
  "dist/src/inner.css.gz",
  "dist/src/inner.css.zst",
  "dist/src/inner.js.br",
  "dist/src/inner.js.gz",
  "dist/src/inner.js.zst",
  "outer.html",
  "outer.png",
  "src/inner.css",
  "src/inner.js",
]
`;

exports[`outdir,basedir 1`] = `
[
  "already.gz",
  "dist/inner.css.br",
  "dist/inner.css.gz",
  "dist/inner.css.zst",
  "dist/inner.js.br",
  "dist/inner.js.gz",
  "dist/inner.js.zst",
  "outer.html",
  "outer.html.br",
  "outer.html.gz",
  "outer.html.zst",
  "outer.png",
  "outer.png.br",
  "outer.png.gz",
  "outer.png.zst",
  "src/inner.css",
  "src/inner.js",
]
`;

exports[`outdir,extensionless 1`] = `
[
  "already.gz",
  "dist/outer.html",
  "dist/outer.png",
  "dist/src/inner.css",
  "dist/src/inner.js",
  "outer.html",
  "outer.png",
  "src/inner.css",
  "src/inner.js",
]
`;

exports[`simple 1`] = `
[
  "already.gz",
  "outer.html",
  "outer.html.br",
  "outer.html.gz",
  "outer.html.zst",
  "outer.png",
  "outer.png.br",
  "outer.png.gz",
  "outer.png.zst",
  "src/inner.css",
  "src/inner.css.br",
  "src/inner.css.gz",
  "src/inner.css.zst",
  "src/inner.js",
  "src/inner.js.br",
  "src/inner.js.gz",
  "src/inner.js.zst",
]
`;
